--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -51,7 +51,7 @@ main{
 .selecao-de-personagens .personagem-grande img{
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
 }
 
@@ -113,6 +113,30 @@ main{
     animation-direction: alternate;
 }
 
+.selecao-de-personagens .lista-de-personagens .logotipo{
+    border: 2px solid var(--cor-padrao);
+    background-color: var(--cor-padrao);
+    width: 30%;
+    height: 160px;
+    cursor: pointer;
+    z-index: 2;
+    border-radius: 5px;
+    position: relative;
+    transition: 0.15s ease-in-out;
+}
+
+.selecao-de-personagens .lista-de-personagens .logotipo img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.selecao-de-personagens .lista-de-personagens .personagem.selecionado{
+    border: 2px solid var(--cor-azul-media);
+    animation: c-glowing-blue .3s ease-in-out infinite;
+    animation-direction: alternate;
+}
+
 .selecao-de-personagens .lista-de-personagens .personagem:hover{
     animation: c-glowing-blue .3s ease-in-out infinite;
     animation-direction: alternate;
@@ -135,10 +159,11 @@ main{
     display: none;
     font-family: 'Times New Roman', 'Times New Roman', Times, serif;
     position: absolute;
+    font-size: larger;
     top: 5px;
     left: 5px;
-    color: var(--cor-azul-media);
-    transition: opacity .3 ease-in-out;
+    color:var(--cor-vermelha-principal);
+    transition: opacity .3s ease-in-out;
     animation: text-glowing-blue .3s ease-in-out infinite;
     animation-direction: alternate;
 }
